Correct a misplaced #endif.
2005-12-07  Matthias Clasen  <mclasen@redhat.com>

	* src/yelp-window.c (window_populate): Correct a misplaced
	#endif.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* src/yelp-window.c (window_populate): Correct a misplaced
+	#endif.
+
 2005-11-30  Christian Persch  <chpe@cvs.gnome.org>
 
 	* Makefile.am:
