Remove critical warning when history is null
2005-12-08  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c:
	  Remove critical warning when history is null

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-08  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-window.c:
+	  Remove critical warning when history is null
+
 2005-12-07  Matthias Clasen  <mclasen@redhat.com>
 
 	* src/yelp-window.c (window_populate): Correct a misplaced
