--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-12-08  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-bookmarks.c:
+	Fix critical warning when sections don't exist
+	
+2005-12-08  Don Scorgie  <dscorgie@cvs.gnome.org>
+
 	* src/yelp-window.c:
 	  Remove critical warning when history is null
 
