--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-11  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation by
+	Luca Ferretti <elle.uca@infinito.it>.
+
 2005-11-08  Runa Bhattacharjee <runa@bengalinux.org>
 	* bn.po: Updated Bengali (bn) Translation
 	by Khandakar Mujahidul Islam <suzan@bengalinux.org>
