--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-info-parser.c: 
+	Fix minor compiler warning
+	
 2005-12-10  Don Scorgie  <dscorgie@cvs.gnome.org>
 
        * stylesheets/info2html.xsl:
