Only print in debug mode
2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-html.cpp:
	Only print in debug mode

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-html.cpp: 
+	Only print in debug mode
+	
+2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>
+
 	* src/yelp-info-parser.c: 
 	Fix minor compiler warning
 	
