Add printing support
2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>

	* configure.in:
	* data/ui/yelp-ui.xml:
	* src/Makefile.am:
	* src/Yelper.h:
	* src/Yelper.cpp:
	* src/yelp-db-print-pager.h:
	* src/yelp-db-print-pager.c:
	* src/yelp-gecko-services.h:
	* src/yelp-gecko-services.cpp:
	* src/yelp-html.cpp:
	* src/yelp-html.h:
	* src/yelp-main.c:
	* src/yelp-print.c:
	* src/yelp-print.h:
	* src/yelp-window.c:
	Add printing support

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* configure.in: 
+	* data/ui/yelp-ui.xml: 
+	* src/Makefile.am: 
+	* src/Yelper.h: 
+	* src/Yelper.cpp: 
+	* src/yelp-db-print-pager.h: 
+	* src/yelp-db-print-pager.c: 
+	* src/yelp-gecko-services.h: 
+	* src/yelp-gecko-services.cpp: 
+	* src/yelp-html.cpp: 
+	* src/yelp-html.h: 
+	* src/yelp-main.c: 
+	* src/yelp-print.c: 
+	* src/yelp-print.h: 
+	* src/yelp-window.c: 
+	Add printing support
+	
 2005-12-11  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-toc-pager.c: (yelp_toc_pager_init),
