--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.13.2 ====================
+
+2005-12-12  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.13.2
+
 2005-12-11  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* configure.in: 
