--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2005-12-22  Vincent van Adrighem  <adrighem@gnome.org>
 
+	* nl.po: Translation updated by .
+
+2005-12-22  Vincent van Adrighem  <adrighem@gnome.org>
+
 	* nl.po: Translation updated by Tino Meinen.
 
 2005-12-22  Takeshi AIHANA <aihana@gnome.gr.jp>
