Updated Thai translation.
2005-12-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-12-26 21:23+0700\n"
-"PO-Revision-Date: 2005-12-26 21:49+0700\n"
+"PO-Revision-Date: 2005-12-27 21:03+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -195,7 +195,7 @@ msgstr "<b>ระบบอำนวยการใช้งาน</b>"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Fonts</b>"
-msgstr "<b>ฟอนต์</b>"
+msgstr "<b>แบบอักษร</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "<b>_Bookmarks:</b>"
@@ -255,7 +255,7 @@ msgstr "_ก่อนหน้า"
 
 #: data/ui/yelp.glade.h:18
 msgid "_Use system fonts"
-msgstr "ใ_ช้ฟอนต์ของระบบ"
+msgstr "ใ_ช้แบบอักษรของระบบ"
 
 #: data/ui/yelp.glade.h:19
 msgid "_Variable width:"
@@ -267,19 +267,19 @@ msgstr "ห_มดแล้วเริ่มใหม่"
 
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr "ฟอนต์สำหรับข้อความความกว้างตายตัว"
+msgstr "แบบอักษรสำหรับข้อความความกว้างตายตัว"
 
 #: data/yelp.schemas.in.h:2
 msgid "Font for text"
-msgstr "ฟอนต์สำหรับข้อความ"
+msgstr "แบบอักษรสำหรับข้อความ"
 
 #: data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr "ฟอนต์สำหรับข้อความที่อักขระมีความกว้างตายตัว"
+msgstr "แบบอักษรสำหรับข้อความที่อักขระมีความกว้างตายตัว"
 
 #: data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr "ฟอนต์สำหรับข้อความที่อักขระมีความกว้างไม่ตายตัว"
+msgstr "แบบอักษรสำหรับข้อความที่อักขระมีความกว้างไม่ตายตัว"
 
 #: data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
@@ -291,11 +291,11 @@ msgstr "ใช้เคอร์เซอร์"
 
 #: data/yelp.schemas.in.h:7
 msgid "Use system fonts"
-msgstr "ใช้ฟอนต์ของระบบ"
+msgstr "ใช้แบบอักษรของระบบ"
 
 #: data/yelp.schemas.in.h:8
 msgid "Use the default fonts set for the system."
-msgstr "ใช้ฟอนต์ปริยายที่กำหนดไว้ในระบบ"
+msgstr "ใช้แบบอักษรปริยายที่กำหนดไว้ในระบบ"
 
 #: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2618
 msgid "Yelp"
