Clean up new get_title code. Prefer titleAbbrev if available
* src/yelp-db-pager.c:
Clean up new get_title code.
Prefer titleAbbrev if available

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-04  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-db-pager.c: 
+	Clean up new get_title code.  
+	Prefer titleAbbrev if available
+	
 2005-12-20  Brent Smith  <gnome@nextreality.net>
 
 	* src/test-man-parser.c: (main):
