--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-05  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2006-01-03  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
