Fix a small typo, bug #325286
* src/yelp-print.c:
Fix a small typo, bug #325286

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-05  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-print.c: 
+	Fix a small typo, bug #325286
+
 2006-01-04  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-db-pager.c: 
