--- a/po/nl.po
+++ b/po/nl.po
@@ -1,6 +1,6 @@
 # Dutch translation of Yelp.
 # Copyright © 2002 Free Software Foundation, Inc.
-# Tino Meinen <a.t.meinen@chello.nl>, 2002, 2003, 2004, 2005
+# Tino Meinen <a.t.meinen@chello.nl>, 2002, 2003, 2004, 2005, 2006
 # Ronald Hummelink <ronald@hummelink.xs4all.nl>, 2002
 # Reinout van Schouwen <reinout@cs.vu.nl>, 2005 (small corrections)
 #
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp cvs\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-12-21 23:13+0100\n"
-"PO-Revision-Date: 2005-12-22 02:56+0100\n"
+"POT-Creation-Date: 2006-01-06 06:58+0100\n"
+"PO-Revision-Date: 2006-01-06 09:15+0100\n"
 "Last-Translator: Tino Meinen <a.t.meinen@chello.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
@@ -339,7 +339,7 @@ msgstr "Een bladwijzer met titel <b>%s</b> bestaat al voor deze pagina."
 msgid "Document Sections"
 msgstr "Documentsecties"
 
-#: ../src/yelp-db-pager.c:248
+#: ../src/yelp-db-pager.c:247 ../src/yelp-db-print-pager.c:198
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
@@ -379,6 +379,13 @@ msgstr "Kon het document niet verwerken"
 #: ../src/yelp-error.c:66
 msgid "No information is available about the error."
 msgstr "Er is geen informatie beschikbaar voor deze fout."
+
+#: ../src/yelp-info-pager.c:181
+#, c-format
+msgid ""
+"The file  ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"not a well-formed info page."
+msgstr "Het bestand ‘%s’ kon niet worden verwerkt. Ofwel het bestand bestaat niet, of het is een niet-juist gevormde info-pagina."
 
 #: ../src/yelp-io-channel.c:98
 #, c-format
@@ -423,6 +430,69 @@ msgstr "Documentinformatie"
 #: ../src/yelp-pager.c:123
 msgid "The YelpDocInfo struct of the document"
 msgstr "De YelpDocInfo struct van het document"
+
+#: ../src/yelp-print.c:138
+msgid "Preparing to print"
+msgstr "Voorbereiding voor afdrukken"
+
+# handleiding-pagina's is te verwarrend en te algemeen.
+#: ../src/yelp-print.c:275
+msgid "Pages"
+msgstr "Pagina's"
+
+#: ../src/yelp-print.c:348
+msgid "Generating PDF is not currently supported"
+msgstr "Het maken van een PDF is nog niet mogelijk"
+
+#: ../src/yelp-print.c:356
+msgid "Printing is not supported on this printer"
+msgstr "Afdrukken is niet mogelijk op deze printer"
+
+#: ../src/yelp-print.c:359
+#, c-format
+msgid ""
+"You were trying to print to a printer using the \"%s\" driver.  This program "
+"requires a PostScript printer driver."
+msgstr "U probeerde af te drukken naar een printer met het \"%s\" stuurprogramma. Dit programma vereist een PostScript printer-stuurprogramma."
+
+# er was een fout bij het afdrukken
+#: ../src/yelp-print.c:402
+msgid "An error occurred while printing"
+msgstr "Er is een fout opgetreden bij het afdrukken"
+
+# het bleek onmogelijk/het was onmogelijk/het is onmogelijk gebleken
+#: ../src/yelp-print.c:406
+msgid "It was not possible to print your document"
+msgstr "Het bleek niet mogelijk om uw document af te drukken"
+
+#: ../src/yelp-print.c:466
+msgid "Printing"
+msgstr "Afdrukken"
+
+#: ../src/yelp-print.c:493
+msgid "<b>Printing</b>"
+msgstr "<b>Afdrukken</b>"
+
+#: ../src/yelp-print.c:495
+msgid "Waiting to print"
+msgstr "Wachten om af te drukken"
+
+#: ../src/yelp-print.c:559
+msgid "_From:"
+msgstr "_Van:"
+
+#: ../src/yelp-print.c:572
+msgid "Sets the start of the range of pages to be printed"
+msgstr "Geeft de eerste pagina die moet worden afgedrukt"
+
+# Van 1 tot 6 (geen hoofdletter bij tot)
+#: ../src/yelp-print.c:574
+msgid "_To:"
+msgstr "_tot:"
+
+#: ../src/yelp-print.c:587
+msgid "Sets the end of the range of pages to be printed"
+msgstr "Geeft de laatste pagina die moet worden afgedrukt"
 
 #: ../src/yelp-search-pager.c:311
 msgid ""
@@ -670,7 +740,6 @@ msgstr ""
 msgid "Man pages are not supported in this version."
 msgstr "Man-pagina's kunnen in deze versie niet worden weergegeven."
 
-# kunnen niet worden weergegeven
 #: ../src/yelp-window.c:861 ../src/yelp-window.c:1265
 msgid "GNU info pages are not supported in this version"
 msgstr "GNU info-pagina's kunnen in deze versie niet worden weergegeven."
@@ -781,10 +850,6 @@ msgstr "Hulp bij GNOME"
 # sectie/onderdeel
 #~ msgid "Unknown Section"
 #~ msgstr "Onbekende sectie"
-
-# handleiding-pagina's is te verwarrend en te algemeen.
-#~ msgid "Man Pages"
-#~ msgstr "Man-pagina's"
 
 # geluid en video
 #~ msgid "Sound &amp; Video"
@@ -1086,9 +1151,6 @@ msgstr "Hulp bij GNOME"
 
 #~ msgid "Title"
 #~ msgstr "Titel"
-
-#~ msgid "Warning"
-#~ msgstr "Waarschuwing"
 
 # Een Hulp voor GNOME, een Hulp-programma voor GNOME
 #~ msgid "A Help Browser for GNOME"
