--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-01-06  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-search-pager.c: 
+	* configure.in:
+	Bump minimum beagle requirement and fix compiler error
+	Bug #325049
+
 2006-01-05  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-print.c: 
