Brent Smith  <gnome@nextreality.net>         * src/info2html/data.h:         * src/info2html/parse.c:         * src/info2html/parse.h:         * src/info2html/version.h:         * src/man2html/yelp-man2html.c:         * src/test-reader.c:         * src/yelp-db2html.c:         * src/yelp-html-gtkhtml1.c:         * src/yelp-html-gtkhtml2.c:         * src/yelp-index-model.c:         * src/yelp-index-model.h:         * src/yelp-info.c:         * src/yelp-info.h:         * src/yelp-man.c:         * src/yelp-man.h:         * src/yelp-pregenerate.c:         * src/yelp-pregenerate.h:         * src/yelp-uri.c:         * src/yelp-uri.h:         removed these lecagy files: fixes #304429

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+2006-01-07  Brent Smith  <gnome@nextreality.net>
+
+	* src/info2html/data.h:
+	* src/info2html/parse.c:
+	* src/info2html/parse.h:
+	* src/info2html/version.h:
+	* src/man2html/yelp-man2html.c:
+	* src/test-reader.c:
+	* src/yelp-db2html.c:
+	* src/yelp-html-gtkhtml1.c:
+	* src/yelp-html-gtkhtml2.c:
+	* src/yelp-index-model.c:
+	* src/yelp-index-model.h:
+	* src/yelp-info.c:
+	* src/yelp-info.h:
+	* src/yelp-man.c:
+	* src/yelp-man.h:
+	* src/yelp-pregenerate.c:
+	* src/yelp-pregenerate.h:
+	* src/yelp-uri.c:
+	* src/yelp-uri.h:
+	removed these lecagy files: fixes #304429
+
 2006-01-07  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* configure.in: Added "zh_HK" to ALL_LINGUAS.
