Make HTML frames work, fixes bug #157337
* src/yelp-marshal.list:
* src/yelp-html.h:
* src/yelp-html.cpp:
* src/yelp-window.c:
Make HTML frames work, fixes bug #157337

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-01-07  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-marshal.list: 
+	* src/yelp-html.h: 
+	* src/yelp-html.cpp: 
+	* src/yelp-window.c: 
+	Make HTML frames work, fixes bug #157337
+	
 2006-01-07  Brent Smith  <gnome@nextreality.net>
 
 	* src/info2html/data.h:
