Add info pages to the table of contents
* src/yelp-utils.h:
* src/yelp-utils.c:
* src/yelp-toc-pager.c:
* src/yelp-info-pager.c:
* data/info.xml.in:
* data/Makefile.am:
* src/yelp-window.c:
Add info pages to the table of contents

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2006-01-07  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-utils.h: 
+	* src/yelp-utils.c: 
+	* src/yelp-toc-pager.c: 
+	* src/yelp-info-pager.c: 
+	* data/info.xml.in: 
+	* data/Makefile.am: 
+	* src/yelp-window.c: 
+	Add info pages to the table of contents
+	
+2006-01-07  Don Scorgie  <dscorgie@cvs.gnome.org>
+
 	* src/yelp-marshal.list: 
 	* src/yelp-html.h: 
 	* src/yelp-html.cpp: 
