Brent Smith <gnome@nextreality.net> committed patch from Christian Persch
Brent Smith  <gnome@nextreality.net>
	* src/yelp-gecko-utils.cpp:
	committed patch from Christian Persch that should fix
	a gecko crash due to a bad profile; fixes #164689

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-07  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-gecko-utils.cpp:
+	committed patch from Christian Persch that should fix
+	a gecko crash due to a bad profile; fixes #164689
+
 2006-01-07  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-utils.h: 
