--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-07  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-html.cpp: 
+	Cleanup some of the previous HTML frame work
+
 2006-01-07  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-bookmarks.c: (yelp_bookmarks_add):
