- Fixed query-string-stripping, #301741
* src/yelp-utils.c:
- Fixed query-string-stripping, #301741

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-08  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-utils.c:
+	- Fixed query-string-stripping, #301741
+
 2006-01-08  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-io-channel.c: 
