--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-09  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-base.c: 
+	Actually commit cleanup in file
+
 2006-01-08  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
