Add MAINTAINERS file
* MAINTAINERS:
Add MAINTAINERS file

* configure.in:
Enable man and info support by default :)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-01-12  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* MAINTAINERS: 
+	Add MAINTAINERS file
+	
+	* configure.in: 
+	Enable man and info support by default :)
+
 2006-01-09  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-window.c: 
