Add /usr/local/info and /usr/local/share/info to default infopaths
* src/yelp-utils.c:
Add /usr/local/info and /usr/local/share/info to default infopaths

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2006-01-15  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-utils.c: 
+	Add /usr/local/info and /usr/local/share/info to default infopaths
+
 	* src/yelp-info-parser.c: 
 	* src/yelp-info-pager.c: 
 	* src/yelp-search-pager.c: 
