--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-15  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Added missing file.
+	* POTFILES.skip: Removed missing file.
+	* en_CA.po: Updated Canadian English translation.
+
 2006-01-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
