--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-17  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* configure.in: 
+	Add appropriate CFLAGS when using Beagle search
+
 2006-01-16  Brent Smith  <gnome@nextreality.net>
 
 	* configure.in:
