--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-17  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2006-01-16  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
