--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-18  Slobodan D. Sredojevic  <slobo@akrep.be>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation
+
 2006-01-17  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
