Make TOC pages XHML stric compliant
* stylesheets/toc2html.xsl:
* src/yelp-toc-pager.c:
Make TOC pages XHML stric compliant

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-18  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* stylesheets/toc2html.xsl: 
+	* src/yelp-toc-pager.c: 
+	Make TOC pages XHML stric compliant
+	
 2006-01-17  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* configure.in: 
